@@ -10,6 +10,7 @@ Legend:
 1.5.0 (beta)
 ==============================
 Windows XP is no longer supported.
+Instead d3dcompiler_43.dll now used d3dcompiler_47.dll.
 
 Updated libraries:
 	ffmpeg git-n3.2-dev-320-g0a088de;
